# saleorApps

./: .gitignore  .pylintrc  pyproject.toml  requirements.txt
myapp/: __main__.py  app.py  database.py  inpost_app.py  schema.py
myapp/configuration/: settings.py
myapp/inpost/: models.py  router.py  webhooks.py
saleorApps.git/: config
